Allow PUT, PATCH and DELETE endpoints from now on